--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,10 @@
 {
   "name": "__MSG_extName__",
   "version": "0.1.0",
-  "description": "",
+  "description": "__MSG_extDesc__",
   "permissions": [
-    "tabs"
   ],
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
-  "background_page": "background.html",
   "omnibox": {
     "keyword": "img"
   },
