--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   "background": {
     "scripts": [
       "background.js"
-    ]
+    ],
+    "persistent": false
   },
   "default_locale": "en",
   "icons": {
